objects/Contract.object
<CustomObject>
    <fields>
        <fullName>AOPS_Cust_Id__c</fullName>
        <label>AOPS Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Extension_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension Name</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Org__c</fullName>
        <formula>Account.Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Recordtype__c</fullName>
        <formula>Account.RecordType_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Recordtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_requirements_for_deleted_or_disco__c</fullName>
        <label>What Add&apos;l action taken on disc&apos;d sku</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Replace with OD Alternate (when possible)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Contract</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Active Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_allow_for_custom_cores__c</fullName>
        <description>Does written agreement allow for custom cores?</description>
        <label>Agreement allow for custom cores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (Forced inheritance)</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_provide_disco_on_spec_orders__c</fullName>
        <label>Agreement have discount on special order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_respon_based_on_cat_prod_assor__c</fullName>
        <label>Agreement/respon based on cat/prod assor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>SP Canada</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Any_other_callouts_from_legal__c</fullName>
        <label>Any other callouts from legal</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apply_Child_Core_Written_Agree_Lang__c</fullName>
        <label>Apply Child Core Written Agree Lang</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apply_Parent_Cust_Core_Agreement_Lang__c</fullName>
        <label>Apply Parent Cust Core Agreement Lang</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aprimo_Id__c</fullName>
        <externalId>true</externalId>
        <label>Aprimo Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Are_there_Child_SKU_Count_Limits__c</fullName>
        <label>Are there Child SKU Count Limits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_GP_SKU_Count_Limitations__c</fullName>
        <label>Are there GP SKU Count Limitations?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Minority_Spend_Requirements__c</fullName>
        <label>Does agreement stipulate Diversity Spend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Parent_SKU_Count_Limitations__c</fullName>
        <label>Are there Parent SKU Count Limitations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Rebates_Incentives__c</fullName>
        <label>Are there Rebates/Incentives?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Standalone_SKU_Count_Limit__c</fullName>
        <label>Are there Standalone SKU Count Limit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basis_Level_for_Customer_Agreement__c</fullName>
        <label>Basis Level for Customer Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Child Account</fullName>
                </value>
                <value>
                    <fullName>Grandparent Account</fullName>
                </value>
                <value>
                    <fullName>Great Grandparent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parent Account</fullName>
                </value>
                <value>
                    <fullName>Stand-Alone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Outcome__c</fullName>
        <label>Bid Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Multiple Award</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_item_fee_language__c</fullName>
        <label>Bulk item fee language</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDM_Emp_Id__c</fullName>
        <label>CDM_Emp_Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Emp_Id__c</fullName>
        <label>CLM_Emp_Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_tiered_discount_language__c</fullName>
        <label>CPD tiered discount language</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSF_Emp_Id__c</fullName>
        <label>CSF Emp Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSF_Hierarchy_1__c</fullName>
        <label>CSF Hierarchy 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSF_Hierarchy_2__c</fullName>
        <label>CSF Hierarchy 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSF_Hierarchy_3__c</fullName>
        <label>CSF Hierarchy 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSF_Review_Date__c</fullName>
        <label>CSF Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Out_Auto_Force_Sub__c</fullName>
        <label>Are auto/forced subs permitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Out_Cost_Plus_Floor__c</fullName>
        <label>Agreemnt contain cost plus/floor pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Out_Sub_Language__c</fullName>
        <label>Auto-Sub Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Catalog_Product_Assortment__c</fullName>
        <label>Catalog/Product Assortment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Account_Name__c</fullName>
        <label>Child Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_Number__c</fullName>
        <label>Child Account Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Annual_Spend_Description__c</fullName>
        <label>Child Annual Spend Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Annual_Spend_Requirement_Amount__c</fullName>
        <label>Child Annual Spend Requirement Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Annual_Spend_Requirement__c</fullName>
        <label>Child Annual Spend Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Bid_Agreement_Number__c</fullName>
        <label>Child Bid Agreement Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Core_List_Capped_Price_Increase__c</fullName>
        <label>Child Core List Capped Price Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate Core</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>SKU Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Core_SKU_Level_Capped_Price_Incr__c</fullName>
        <label>Child Core SKU Level Capped Price Incr</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$ Cap</fullName>
                </value>
                <value>
                    <fullName>% Cap</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Core_have_Capped_Price_Increase__c</fullName>
        <label>Child Core have Capped Price Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Cust_Core_Upd_Notice_Period_Other__c</fullName>
        <label>Child Cust Core Upd Notice Period Other</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Cust_Core_Upd_Notice_Period__c</fullName>
        <label>Child Cust Core Upd Notice Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>120 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No Limit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Cust_Core_Update_Notice_Type__c</fullName>
        <label>Child Cust Core Update Notice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Mutual Written Consent</fullName>
                </value>
                <value>
                    <fullName>Notification Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Custom_Core_Discount_Basis__c</fullName>
        <label>Child Custom Core Discount Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                </value>
                <value>
                    <fullName>WAPO Mark-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Custom_Core_Discount_Percent__c</fullName>
        <label>Child Custom Core Discount Percent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Floor_Structure_Description__c</fullName>
        <label>Child Floor Structure Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Man_Ven_letter_req_for_Increase__c</fullName>
        <label>Child Man/Ven letter req for Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Pricing_Update_Frequency_Other__c</fullName>
        <label>Child Pricing Update Frequency Other</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Pricing_Update_Frequency__c</fullName>
        <label>Child Pricing Update Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Market Fluctuation</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_SKU_Cap_Dollar_Amount__c</fullName>
        <label>Child SKU Cap Dollar Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_SKU_Cap_Percent_Amount__c</fullName>
        <label>Child SKU Cap Percent Amount</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Child_SKU_Count_Limitation__c</fullName>
        <label>Child SKU Count Limitation</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_decr_req_to_be_applied_to_Cus_Core__c</fullName>
        <label>Child decr req to be applied to Cus Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clawback_Provision_Language__c</fullName>
        <label>Clawback Provision Language</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for SpringCM functionality</description>
        <label>Contract Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Development_Negotiation_MGR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Development Negotiation MGR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Extension_Authorization_Type__c</fullName>
        <label>Contract Extension Authorization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Both Parties Written Approval</fullName>
                </value>
                <value>
                    <fullName>Customer Written Approval</fullName>
                </value>
                <value>
                    <fullName>No Written Approval Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Extensions__c</fullName>
        <label>Contract Extensions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Lifecycle_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Lifecycle Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Owner_Email__c</fullName>
        <label>Contract Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Owner__c</fullName>
        <label>Contract Owner</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthony Falbo</fullName>
                </value>
                <value>
                    <fullName>Jean Davis</fullName>
                </value>
                <value>
                    <fullName>Denise DeFerrari</fullName>
                </value>
                <value>
                    <fullName>Pricing Compliance Queue</fullName>
                    <default>true</default>
                    <label>Pricing Compliance Queue</label>
                </value>
                <value>
                    <fullName>DocuSign Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_State_Minimum_Order__c</fullName>
        <label>Contract say charge Min Order Value fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                </value>
                <value>
                    <fullName>Standard BSD terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed/Cancelled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>CPD-PRINT</fullName>
                </value>
                <value>
                    <fullName>DEVIATED PRICING</fullName>
                </value>
                <value>
                    <fullName>FURNITURE</fullName>
                </value>
                <value>
                    <fullName>MPS</fullName>
                </value>
                <value>
                    <fullName>OFFICE SUPPLIES</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PAPER</fullName>
                </value>
                <value>
                    <fullName>Partner Compensation Agreement</fullName>
                </value>
                <value>
                    <fullName>SCHOOL SUPPLIES</fullName>
                </value>
                <value>
                    <fullName>TECHNOLOGY</fullName>
                </value>
                <value>
                    <fullName>PROPRIETARY CONTRACT</fullName>
                </value>
                <value>
                    <fullName>CPD-PROMO</fullName>
                </value>
                <value>
                    <fullName>REBATES ONLY</fullName>
                </value>
                <value>
                    <fullName>NO CONTRACT- ADD DOCUMENTS TO REPOSITORY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>